fix: Layout issues [PT-188331349]
- Sets app to use fix full window layout
- Removes width of header so it expands to fill layout
- Styles about tab

--- a/src/components/model/model-component.scss
+++ b/src/components/model/model-component.scss
@@ -7,6 +7,7 @@ $pluginMinWidth: 304px;
 
 .model-header {
   min-width: $pluginMinWidth;
+  width: 100%;
 }
 .model-controls {
   display: flex;
